fixed footer to not overlap content

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,8 +1,14 @@
 @import "bootstrap";
 
-footer {
-  position: fixed;
-  width: 100%;
-  left: 0;
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
+.footer {
+  position: absolute;
   bottom: 0;
-  }
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+}
